Can't use a common config because of h2-deterministic.
Have to pull out the preview switch and put it in each module, sadly.